`Removed logo icons from index.html`

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="index.html" class="logo">
-                        <div class="logo-icon">RC</div>
+                        <div class="logo-icon"></div>
                         <div class="logo-text">
                             <span class="logo-name">Rystien Coins</span>
                             <span class="logo-tagline">QUICK ACCESS TO LOAN</span>
@@ -292,7 +292,7 @@
             <div class="footer-content">
                 <div class="footer-col">
                     <div class="footer-logo">
-                        <div class="logo-icon">RC</div>
+                        <div class="logo-icon"></div>
                         <div class="logo-text">
                             <span class="logo-name">Rystien Coins</span>
                             <span class="logo-tagline">QUICK ACCESS TO LOAN</span>
