--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                     <p>Our commitment goes beyond just providing financial services. We aim to empower our clients with the knowledge and tools they need to make informed financial decisions and achieve their goals.</p>
                 </div>
                 <div class="about-image">
-                    <img src="images/about-story.jpg" alt="Rystien Coins Story">
+                    <img src="https://images.unsplash.com/photo-1556761175-b413da4baf72?w=800&h=600&fit=crop" alt="Rystien Coins Story">
                 </div>
             </div>
         </div>
