--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <a href="about.html" class="btn btn-primary">Learn More About Us</a>
                 </div>
                 <div class="why-choose-image">
-                    <img src="images/why-choose.jpg" alt="Why Choose Rystien Coins">
+                    <img src="https://images.unsplash.com/photo-1573164713714-d95e436ab8d6?w=800&h=600&fit=crop" alt="Why Choose Rystien Coins">
                 </div>
             </div>
         </div>
