--- a/blog.html
+++ b/blog.html
@@ -14,11 +14,7 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="index.html" class="logo">
-                        <div class="logo-icon">RC</div>
-                        <div class="logo-text">
-                            <span class="logo-name">Rystien Coins</span>
-                            <span class="logo-tagline">QUICK ACCESS TO LOAN</span>
-                        </div>
+                        <img src="images/logo.png" alt="Rystien Coins Logo" class="logo-image">
                     </a>
                     <button class="mobile-toggle" id="mobileToggle">
                         <span></span>
@@ -204,13 +200,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
-                    <div class="footer-logo">
-                        <div class="logo-icon">RC</div>
-                        <div class="logo-text">
-                            <span class="logo-name">Rystien Coins</span>
-                            <span class="logo-tagline">QUICK ACCESS TO LOAN</span>
-                        </div>
-                    </div>
+                    <a href="index.html" class="footer-logo">
+                        <img src="images/logo.png" alt="Rystien Coins Logo" class="logo-image">
+                    </a>
                     <p>Your trusted partner for loans, savings, investments, and financial services in Lagos, Nigeria.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -252,8 +244,9 @@
             <div class="footer-bottom">
                 <p>&copy; 2024 Rystien Coins. All rights reserved.</p>
                 <div class="footer-links">
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Terms & Conditions</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="terms-conditions.html">Terms & Conditions</a>
+                    <a href="faq.html">FAQ</a>
                 </div>
             </div>
         </div>
