--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="index.html" class="logo">
-                        <div class="logo-icon"></div>
-                        <div class="logo-text">
-                            <span class="logo-name">Rystien Coins</span>
-                            <span class="logo-tagline">QUICK ACCESS TO LOAN</span>
-                        </div>
+                        <img src="images/logo.png" alt="Rystien Coins Logo" class="logo-image">
                     </a>
                     <button class="mobile-toggle" id="mobileToggle">
                         <span></span>
@@ -33,8 +29,10 @@
                         <li><a href="services.html">Services</a></li>
                         <li><a href="apply.html">Apply for Loan</a></li>
                         <li><a href="blog.html">Blog</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="apply.html" class="btn-primary-nav">Get Started</a></li>
+                        <li><a href="login.html">Login</a></li>
+                        <li><a href="register.html" class="btn-primary-nav">Register</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,6 +41,9 @@
 
     <!-- Hero Section -->
     <section class="hero">
+        <video autoplay muted loop playsinline>
+            <source src="images/grok-video-93205a24-13eb-4130-abc1-40d881566e01 (1).mp4" type="video/mp4">
+        </video>
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">Quick Access to Loans & Smart Financial Services</h1>
@@ -291,13 +292,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
-                    <div class="footer-logo">
-                        <div class="logo-icon"></div>
-                        <div class="logo-text">
-                            <span class="logo-name">Rystien Coins</span>
-                            <span class="logo-tagline">QUICK ACCESS TO LOAN</span>
-                        </div>
-                    </div>
+                    <a href="index.html" class="footer-logo">
+                        <img src="images/logo.png" alt="Rystien Coins Logo" class="logo-image">
+                    </a>
                     <p>Your trusted partner for loans, savings, investments, and financial services in Lagos, Nigeria.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -337,10 +334,11 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 Rystien Coins. All rights reserved.</p>
+                <p>&copy; 2024 Rystien Coins. All rights reserved.</p>
                 <div class="footer-links">
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Terms & Conditions</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="terms-conditions.html">Terms & Conditions</a>
+                    <a href="faq.html">FAQ</a>
                 </div>
             </div>
         </div>
