--- a/about.html
+++ b/about.html
@@ -14,11 +14,7 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="index.html" class="logo">
-                        <div class="logo-icon">RC</div>
-                        <div class="logo-text">
-                            <span class="logo-name">Rystien Coins</span>
-                            <span class="logo-tagline">QUICK ACCESS TO LOAN</span>
-                        </div>
+                        <img src="images/logo.png" alt="Rystien Coins Logo" class="logo-image">
                     </a>
                     <button class="mobile-toggle" id="mobileToggle">
                         <span></span>
@@ -70,14 +66,14 @@
                         <i class="fas fa-eye"></i>
                     </div>
                     <h3>Our Vision</h3>
-                    <p>To be Nigeria's most trusted and innovative financial services provider, empowering individuals and businesses to achieve financial freedom and prosperity through accessible, reliable, and customer-centric solutions.</p>
+                    <p>To be your trust worthy financial partner for self upscale, business sustainability and poverty elimination.</p>
                 </div>
                 <div class="vm-card">
                     <div class="vm-icon">
                         <i class="fas fa-bullseye"></i>
                     </div>
                     <h3>Our Mission</h3>
-                    <p>We provide quick and seamless access to loans, savings, investments, and financial services that enable our clients to meet their unique needs, grow their wealth, and secure their financial future with confidence.</p>
+                    <p>Working towards providing a quick and seamless system where investors can earn and grow their wealth while businesses are provided with fund to expand.</p>
                 </div>
             </div>
         </div>
@@ -215,13 +211,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
-                    <div class="footer-logo">
-                        <div class="logo-icon">RC</div>
-                        <div class="logo-text">
-                            <span class="logo-name">Rystien Coins</span>
-                            <span class="logo-tagline">QUICK ACCESS TO LOAN</span>
-                        </div>
-                    </div>
+                    <a href="index.html" class="footer-logo">
+                        <img src="images/logo.png" alt="Rystien Coins Logo" class="logo-image">
+                    </a>
                     <p>Your trusted partner for loans, savings, investments, and financial services in Lagos, Nigeria.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -263,8 +255,9 @@
             <div class="footer-bottom">
                 <p>&copy; 2024 Rystien Coins. All rights reserved.</p>
                 <div class="footer-links">
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Terms & Conditions</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="terms-conditions.html">Terms & Conditions</a>
+                    <a href="faq.html">FAQ</a>
                 </div>
             </div>
         </div>
